# args

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  TESTING.md  justfile  meson.build  meson_options.txt  project.yml
.github/workflows/: ci.yml
examples/: claude_impl.c++  meson.build
examples/claude_impl/: check.h++  help.h++
examples/claude_impl/help/: api_key_.c++  config_file_.c++  context_window_.c++  disable_cache_.c++  disable_safety_.c++  dry_run_.c++  enable_cache_.c++  endpoint_.c++  get_help_topic_.c++  get_noun_name_.c++  get_version_.c++  help.c++  help_.c++  input_file_.c++  log_file_.c++  log_level_.c++  max_tokens_.c++  model_.c++  output_dir_.c++  output_format_.c++  print.c++  remove_leading_hyphens_algo_inplace_.c++  retry_count_.c++  set_option_list_.c++  stoenum_.c++  stream_.c++  system_prompt_.c++  temperature_.c++  timeout_.c++  to_string.c++  top_k_.c++  top_p_.c++  unknown_.c++  verbose_.c++  version_.c++
examples/claude_impl/help/text/: api_key.h++  config_file.h++  context_window.h++  disable_cache.h++  disable_safety.h++  dry_run.h++  enable_cache.h++  endpoint.h++  header.h++  help.h++  input_file.h++  log_file.h++  log_level.h++  max_tokens.h++  model.h++  nouns.h++  output_dir.h++  output_format.h++  retry_count.h++  separator.h++  stream.h++  system_prompt.h++  temperature.h++  timeout.h++  top_k.h++  top_p.h++  unknown.h++  verbose.h++  version.h++
include/: args.h++
include/args/: error.h++  option_types.h++
include/args/inline/: args.inl  argv_to_string_.inl  argv_to_string_ranges_.inl  does_skip_digit_check_.inl  get_arg.inl  get_help.inl  get_option_addr.inl  get_option_bool.inl  get_option_string.inl  get_option_uint.inl  get_some_args.inl  has.inl  is_digit_.inl  is_in_ull_range_.inl  match_disabling_switch_.inl  match_enabling_switch_.inl  match_truthy_switch_.inl  parse_.inl  process_dashes_.inl  should_interpret_as_ull_.inl  strip_dashes_.inl
include/args/types/: args_key_value_t.h++  args_t.h++  skip_digit_check_t.h++  version_t.h++
src/args/: args_stub.c++
test/ceedling/: test_error.c++  test_getters.c++  test_helpers.c++  test_sequencer.c++
test/support/: test_types.h++
tests/: README.md  test_claude_impl.sh
